<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IRMA Credential Verifier</string>
    <string name="checkcredentialstitle">Student credential: Verifying...</string>
    <string name="foundcredential_title">Student credential: Valid credential found</string>
    <string name="nocredential_title">Student credential: No credential found!</string>
    <string name="verificationfailed_title">Verification failed</string>
    <string name="irmalogo">IRMA logo</string>
    <string name="title_verification_detail">Verification Detail</string>
    <string name="title_verification_list">Verifications</string>
    <string name="verification_list_valid">Valid</string>
    <string name="verification_list_invalid">Invalid</string>
    <string name="verification_list_failed">Failed</string>
	<string name="menu_history">History</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_stats">Statistics</string>
	<string name="title_stats">Transaction Statistics</string>
	<string name="stat_successtext">Successful transactions: </string>
	<string name="stat_failtext">Transaction failures: </string>
	<string name="stat_errortext">Transaction errors: </string>
	<string name="stat_totaltext">Total number of transactions: </string>
	<string name="instruction_text">Please supply your IRMA card.</string>
	<string name="credential_info">Student credential</string>
	<string name="status_waiting">Waiting for card</string>
	<string name="status_checking">Checking credentials</string>
	<string name="status_ok">Attribute verified.</string>
	<string name="status_missing">Attribute not present.</string>
	<string name="status_warning">Try again</string>
	<string name="feedback_text">Attribute value</string>
	<string name="export_text">Export transaction database</string>
	
</resources>