<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:padding="5dp"
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/stat_successtext"
                android:text="@string/stat_successtext" />

            <TextView
                android:padding="5dp"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_successcount" />

            <TextView
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_successpercentage" />
        </TableRow>

        <TableRow
            android:padding="5dp"
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/stat_failtext"
                android:text="@string/stat_failtext" />

            <TextView
                android:padding="5dp"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_failcount" />

            <TextView
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_failpercentage" />
        </TableRow>

        <TableRow
            android:padding="5dp"
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/stat_errortext"
                android:text="@string/stat_errortext" />

            <TextView
                android:padding="5dp"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_errorcount" />

            <TextView
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_errorpercentage" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:padding="5dp"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
			<TextView
    			android:textStyle="bold"
                android:id="@+id/stat_totaltext"
                android:text="@string/stat_totaltext" />

            <TextView
                android:textStyle="bold"
                android:padding="5dp"
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_totalcount" />

            <TextView
                android:gravity="right"
                android:layout_width="fill_parent"
                android:id="@+id/stat_totalpercentage" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_text" />

</LinearLayout>